fix: price was wrapped below checkout product

--- a/src/components/checkoutProduct/CheckoutProduct.scss
+++ b/src/components/checkoutProduct/CheckoutProduct.scss
@@ -26,6 +26,7 @@
       align-self: flex-end;
       font-size: 1.2rem;
       user-select: none;
+      min-width: max-content;
     }
   }
 
